--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.26.0"
 PyQt5 = "^5.15.4"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.2"
+black = {version = "^21.9b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
